@@ -31,6 +31,7 @@ PdfReader class:
   - cacheIndirectObject ➔ cache_indirect_object (TODO: public vs private?)
   - getDestinationPageNumber ➔ get_destination_page_number
   - readNextEndLine ➔ read_next_end_line
+  - getPage(pageNumber) ➔ get_page(page_number)
   - _zeroXref ➔ _zero_xref
   - _authenticateUserPassword ➔ _authenticate_user_password
   - _pageId2Num attribute ➔ _page_id2num
@@ -40,6 +41,12 @@ PdfReader class:
   - _getObjectFromStream ➔ _get_object_from_stream
   - _decryptObject ➔ _decrypt_object
   - _flatten(..., indirectRef) ➔ _flatten(..., indirect_ref)
+
+PdfWriter class:
+
+  - addPage ➔ append_page
+  - insertPage ➔ insert_page
+  - getPage(pageNumber) ➔ get_page(page_number)
 
 PdfMerger class
   - `__init__` parameter: strict=True ➔ strict=False (the PdfFileMerger still has the old default): TODO
